--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>Michael Vasquez</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
   <app-root></app-root>
